--- a/static/style.css
+++ b/static/style.css
@@ -64,8 +64,12 @@ li {
 }
 
 /* DROPDOWN MENU */
-.services {
-    position: relative; 
+
+.guides {
+    position: relative;
+}
+.builds {
+    position: relative;
 }
 .dropdown {
     background-color: rgb(29, 55, 56);
@@ -77,10 +81,11 @@ li {
     color: rgb(249, 250, 250);
 }
 .dropdown li {
-    padding: 0.5em 1em;
+    padding: 0.5 em;
     width: 8em;
     text-align: center;
     margin-top: 10px;
+    margin-left: 5px;
 }
 .dropdown a{
     color: rgb(249, 250, 250);
@@ -93,6 +98,9 @@ li {
 }
 .builds:hover .dropdown {
     display: block;
+}
+.navbar a {
+    margin-left: 0px;
 }
 
 /* Images */
