--- a/static/style.css
+++ b/static/style.css
@@ -38,14 +38,17 @@ li {
     background-color: rgb(248, 251, 252);
     color: rgb(6, 43, 53);
 }
-.nav-links a {
+.navlinks a, .navlinks a:hover, .navlinks a:visited, .navlinks a:active, .navlinks a:focus, .navlinks a:link {
     color: rgb(6, 43, 53);
+    text-decoration: none;
 }
 
 /* Logo */
-.logo {
-    font-size: 32px;
+.logo a {
+    font-size: 45px;
     font-weight: 900;
+    text-decoration: none;
+    color:rgb(6, 43, 53);
 }
 
 /* NAVBAR MENU */
@@ -87,7 +90,7 @@ li {
     margin-top: 10px;
     margin-left: 5px;
 }
-.dropdown a{
+.dropdown a, .dropdown a:link, .dropdown a:visited, .dropdown a:hover, .dropdown a:focus{
     color: rgb(249, 250, 250);
 }
 .dropdown li:hover {
@@ -114,6 +117,22 @@ li {
     width: 30%;
     margin-left: 30px;
 }
+.row {
+    display: flex;
+    text-align: center;
+  }
+  
+.guideImg {
+    display: inline-block;
+    width:20%;
+    padding: 5px;
+}
+.guideImg2 {
+    margin-left: 40px;
+    display: block;
+    width: 25%;
+    padding: 5px;
+}
 
 /* Pages */
 .homeText{
@@ -125,12 +144,15 @@ li {
     align-items: center;
     justify-content: center;
 }
-h1{
+h1 {
     font-size: 35px;
     margin-left: 20px;
 }
 p{
     margin-left: 20px;
+}
+p.search_p {
+    text-align: center;
 }
 .body{
     background-color: #c4e4e4;
